--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: LorMe illustrattion homepage
+title: LorMe illustration homepage
 description: LorMe illustrattion
